--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -138,14 +138,14 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Archivos de origen\Useful</Filter>
     </ClCompile>
-    <ClCompile Include="Arm.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
     <ClCompile Include="FollowingComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Arm.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
     <ClCompile Include="ArmControllerComponent.cpp">
-      <Filter>Archivos de origen</Filter>
+      <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -257,14 +257,14 @@
     <ClInclude Include="RenderComponent.h">
       <Filter>Archivos de encabezado\Components\Base</Filter>
     </ClInclude>
-    <ClInclude Include="Arm.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="FollowingComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Arm.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
+    </ClInclude>
     <ClInclude Include="ArmControllerComponent.h">
-      <Filter>Archivos de encabezado</Filter>
+      <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
