--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -138,6 +138,8 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Archivos de origen\Useful</Filter>
     </ClCompile>
+    <ClCompile Include="Storage.cpp">
+      <Filter>Archivos de origen\Useful</Filter>
     <ClCompile Include="FollowingComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
@@ -263,6 +265,14 @@
     <ClInclude Include="RenderComponent.h">
       <Filter>Archivos de encabezado\Components\Base</Filter>
     </ClInclude>
+    <ClInclude Include="Storage.h">
+      <Filter>Archivos de encabezado\Useful</Filter>
+    </ClInclude>
+    <ClInclude Include="Coin.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="AmmoPackage.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     <ClInclude Include="FollowingComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
