--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -1,105 +1,70 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Archivos de origen">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Archivos de encabezado">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Archivos de recursos">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Errors">
-      <UniqueIdentifier>{f58e6823-83eb-4f71-a8ff-5332cdef64cd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Useful">
-      <UniqueIdentifier>{8dbf753b-f691-4124-adc1-d39e89f2938a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Objects">
-      <UniqueIdentifier>{eea5a983-4aab-46ef-a810-ba3e684241a2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\States">
-      <UniqueIdentifier>{5a71eb9d-4bf0-4e8c-aa33-aa7f5d3f06f9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Components">
-      <UniqueIdentifier>{3d50a2fc-b058-4559-8811-d9bfa62d0b28}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Components">
-      <UniqueIdentifier>{d62e68a1-336d-4333-85cd-335400292ee7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Useful">
-      <UniqueIdentifier>{4afb0900-60c2-4c7c-b18b-504e76413103}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Objects">
-      <UniqueIdentifier>{b26c4527-bc48-469e-b00c-3a831faf87b0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\States">
-      <UniqueIdentifier>{12e6da67-a350-4f6a-be0d-1b030b08a229}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Components\Base">
-      <UniqueIdentifier>{e29c860d-9ed2-4382-9ed5-7b84a1f47801}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Components\Base">
-      <UniqueIdentifier>{69535549-471b-41b9-8975-607aec93bd70}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Game.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Game.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="AnimatedSpriteComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
+    <ClCompile Include="ArmControllerComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="BodyComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="FollowingComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
     <ClCompile Include="FrameComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="InputComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="MeleeEnemyComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
     <ClCompile Include="MovingComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicsComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
     <ClCompile Include="PlayerControllerComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
     <ClCompile Include="TransformComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
-    <ClCompile Include="BoxCollider.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
+    <ClCompile Include="CollisionManager.cpp">
+      <Filter>Archivos de origen\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
+    <ClCompile Include="DebugDraw.cpp">
+      <Filter>Archivos de origen\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="Vector2D.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
+    <ClCompile Include="Shooter.cpp">
+      <Filter>Archivos de origen\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="TTFclass.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
+    <ClCompile Include="Storage.cpp">
+      <Filter>Archivos de origen\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="SpriteComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="Bullet.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Gun.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="GameStateMachine.cpp">
-      <Filter>Archivos de origen\States</Filter>
+    <ClCompile Include="HUD.cpp">
+      <Filter>Archivos de origen\Systems</Filter>
     </ClCompile>
     <ClCompile Include="GameState.cpp">
+      <Filter>Archivos de origen\States</Filter>
+    </ClCompile>
+    <ClCompile Include="GameStateMachine.cpp">
       <Filter>Archivos de origen\States</Filter>
     </ClCompile>
     <ClCompile Include="MenuState.cpp">
@@ -111,74 +76,87 @@
     <ClCompile Include="PlayState.cpp">
       <Filter>Archivos de origen\States</Filter>
     </ClCompile>
-    <ClCompile Include="GameComponent.cpp">
-      <Filter>Archivos de origen\Components\Base</Filter>
+    <ClCompile Include="Arm.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="InputComponent.cpp">
-      <Filter>Archivos de origen\Components\Base</Filter>
-    </ClCompile>
-    <ClCompile Include="PhysicsComponent.cpp">
-      <Filter>Archivos de origen\Components\Base</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderComponent.cpp">
-      <Filter>Archivos de origen\Components\Base</Filter>
-    </ClCompile>
-    <ClCompile Include="CollisionManager.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
-    </ClCompile>
-    <ClCompile Include="BodyComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="HUD.cpp">
-      <Filter>Archivos de origen\Useful</Filter>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Collectable.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Gun.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Layer.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
     <ClCompile Include="Tile.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="DebugDraw.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
-    <ClCompile Include="Storage.cpp">
+    <ClCompile Include="Vector2D.cpp">
       <Filter>Archivos de origen\Useful</Filter>
-    <ClCompile Include="FollowingComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
-    <ClCompile Include="Arm.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
+    <ClCompile Include="TTFclass.cpp">
+      <Filter>Archivos de origen\Useful</Filter>
     </ClCompile>
-    <ClCompile Include="ArmControllerComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Archivos de origen\Useful</Filter>
     </ClCompile>
-    <ClCompile Include="Shooter.cpp">
+    <ClCompile Include="GameComponent.cpp">
       <Filter>Archivos de origen</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeEnemyComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject.h">
+    <ClInclude Include="GameComponent.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="checkML.h">
+    <ClInclude Include="GameObject.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="AnimatedSpriteComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
+    <ClInclude Include="ArmControllerComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="BodyComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="FollowingComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="InputComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="MeleeEnemyComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
     <ClInclude Include="MovingComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
+    <ClInclude Include="PhysicsComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
     <ClInclude Include="PlayerControllerComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
     <ClInclude Include="SpriteComponent.h">
@@ -199,22 +177,19 @@
     <ClInclude Include="SDLError.h">
       <Filter>Archivos de encabezado\Errors</Filter>
     </ClInclude>
-    <ClInclude Include="BoxCollider.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
+    <ClInclude Include="AmmoPackage.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="CollisionManager.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
-    </ClInclude>
-    <ClInclude Include="TTFclass.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector2D.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
+    <ClInclude Include="Arm.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Bullet.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Coin.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Collectable.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.h">
@@ -225,12 +200,6 @@
     </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="FrameComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
     <ClInclude Include="GameState.h">
       <Filter>Archivos de encabezado\States</Filter>
@@ -247,26 +216,14 @@
     <ClInclude Include="PlayState.h">
       <Filter>Archivos de encabezado\States</Filter>
     </ClInclude>
-    <ClInclude Include="GameComponent.h">
-      <Filter>Archivos de encabezado\Components\Base</Filter>
+    <ClInclude Include="CollisionManager.h">
+      <Filter>Archivos de encabezado\Systems</Filter>
     </ClInclude>
-    <ClInclude Include="InputComponent.h">
-      <Filter>Archivos de encabezado\Components\Base</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsComponent.h">
-      <Filter>Archivos de encabezado\Components\Base</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderComponent.h">
-      <Filter>Archivos de encabezado\Components\Base</Filter>
-    </ClInclude>
-    <ClInclude Include="BodyComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
+    <ClInclude Include="DebugDraw.h">
+      <Filter>Archivos de encabezado\Systems</Filter>
     </ClInclude>
     <ClInclude Include="HUD.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
-    </ClInclude>
-    <ClInclude Include="Collectable.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
+      <Filter>Archivos de encabezado\Systems</Filter>
     </ClInclude>
     <ClInclude Include="Layer.h">
       <Filter>Archivos de encabezado\Objects</Filter>
@@ -274,31 +231,64 @@
     <ClInclude Include="Tile.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="DebugDraw.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="Storage.h">
-      <Filter>Archivos de encabezado\Useful</Filter>
-    </ClInclude>
-    <ClInclude Include="Coin.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="AmmoPackage.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    <ClInclude Include="FollowingComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="Arm.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="ArmControllerComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
+      <Filter>Archivos de encabezado\Systems</Filter>
     </ClInclude>
     <ClInclude Include="Shooter.h">
-      <Filter>Archivos de encabezado</Filter>
+      <Filter>Archivos de encabezado\Systems</Filter>
     </ClInclude>
-    <ClInclude Include="MeleeEnemyComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
+    <ClInclude Include="Vector2D.h">
+      <Filter>Archivos de encabezado\Useful</Filter>
     </ClInclude>
+    <ClInclude Include="TTFclass.h">
+      <Filter>Archivos de encabezado\Useful</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Archivos de encabezado\Useful</Filter>
+    </ClInclude>
+    <ClInclude Include="checkML.h">
+      <Filter>Archivos de encabezado\Useful</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Archivos de encabezado">
+      <UniqueIdentifier>{8f77ca8d-a9e9-4bad-aa15-17c884ccd2fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen">
+      <UniqueIdentifier>{ca928045-765c-472f-9820-6b9fd3c8e89e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Components">
+      <UniqueIdentifier>{49ffba2b-c4fc-4e25-b116-50403de2e6c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Errors">
+      <UniqueIdentifier>{a590bdb2-beb9-408c-ba61-76188153342a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Objects">
+      <UniqueIdentifier>{1b894f5e-bdc7-4bbc-a42e-846ae8f9ab0f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\States">
+      <UniqueIdentifier>{b7e6517b-3188-41f1-8e06-44c27e528b72}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Systems">
+      <UniqueIdentifier>{e29914e5-a488-4c4d-82e8-a840db9bf72e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Useful">
+      <UniqueIdentifier>{7c9b851e-98b2-4666-a514-4a5cda6e7660}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Components">
+      <UniqueIdentifier>{13414499-3221-4b7e-a5ad-a63e7fc004c6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Useful">
+      <UniqueIdentifier>{989f4731-b0e4-421f-8d57-257ce0e983d6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Systems">
+      <UniqueIdentifier>{d9fa9364-4d23-4556-9471-37a9fe09b8d5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\States">
+      <UniqueIdentifier>{92666528-668b-416f-924d-cfa225b90918}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Objects">
+      <UniqueIdentifier>{3187a49c-eb7e-48ff-91cc-0cfef58c6ca9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
