--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -25,9 +25,6 @@
     <ClCompile Include="InputComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
-    <ClCompile Include="MeleeEnemyComponent.cpp">
-      <Filter>Archivos de origen\Components</Filter>
-    </ClCompile>
     <ClCompile Include="MovingComponent.cpp">
       <Filter>Archivos de origen\Components</Filter>
     </ClCompile>
@@ -85,9 +82,6 @@
     <ClCompile Include="Collectable.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Archivos de origen\Objects</Filter>
-    </ClCompile>
     <ClCompile Include="Gun.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
@@ -111,6 +105,15 @@
     </ClCompile>
     <ClCompile Include="GameComponent.cpp">
       <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="MartyrEnemy.cpp">
+      <Filter>Archivos de origen\Objects\Enemys</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Archivos de origen\Objects\Enemys</Filter>
+    </ClCompile>
+    <ClCompile Include="MeleeEnemy.cpp">
+      <Filter>Archivos de origen\Objects\Enemys</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -142,9 +145,6 @@
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
     <ClInclude Include="InputComponent.h">
-      <Filter>Archivos de encabezado\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="MeleeEnemyComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
     <ClInclude Include="MovingComponent.h">
@@ -190,9 +190,6 @@
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Collectable.h">
-      <Filter>Archivos de encabezado\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Enemy.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Gun.h">
@@ -249,6 +246,15 @@
     <ClInclude Include="checkML.h">
       <Filter>Archivos de encabezado\Useful</Filter>
     </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemys</Filter>
+    </ClInclude>
+    <ClInclude Include="MartyrEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemys</Filter>
+    </ClInclude>
+    <ClInclude Include="MeleeEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemys</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de encabezado">
@@ -289,6 +295,12 @@
     </Filter>
     <Filter Include="Archivos de origen\Objects">
       <UniqueIdentifier>{3187a49c-eb7e-48ff-91cc-0cfef58c6ca9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Objects\Enemys">
+      <UniqueIdentifier>{df4b3fae-26a3-4c9a-b719-5b1104674e27}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Objects\Enemys">
+      <UniqueIdentifier>{002526e4-015a-4a18-9225-2348333f0ac8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
