--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -112,6 +112,12 @@
     <ClCompile Include="GameComponent.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraBehaivourComponent.cpp">
+      <Filter>Archivos de origen\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -248,6 +254,12 @@
     </ClInclude>
     <ClInclude Include="checkML.h">
       <Filter>Archivos de encabezado\Useful</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraBehaivourComponent.h">
+      <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
